refactor: Stream API의 toList() 메서드로 변경하여 코드 간결화
Java 16+의 toList()를 사용하여 collect(Collectors.toList())를 대체
- Service 레이어: ProductService, OrderService, PointService, CouponService
- DTO: OrderHistoryResponse
- Infrastructure: InMemory Repository 구현체들

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>